--- a/_events/fresh-blood.html
+++ b/_events/fresh-blood.html
@@ -15,7 +15,7 @@ tickets:
     3:
         name: 'Table (for 10)'
         price: '400'
-location: 'Moulsecoomb Leisure Centre'
+venue: 'Moulsecoomb Leisure Centre'
 address: 'Moulsecoomb Way'
 postcode: 'BN2 4PB'
 city: Brighton
